* 2012-09-21 - thorben.betten@open-xchange.com

 - Fix for bug 23062: Check content of JSON object for non-null

* 2012-09-21 - marcus.klein@open-xchange.com

 - Fix for bug 23061: Added buddy classloading to bundle with JYaml library to solve crawler description object loading from YML files.
 - Fix for bug 22658: Complete path has been removed from the configuration file. Relative path are now used. Fixed a problem creating the
   path for new crawler descriptions.
 - Fix for bug 22198: Permissions of crawlers directory and path for crawler descriptions to write are now correct.
 - Fix for bug 22983: Restored redirecting functionality on autologin request for SAML integration.

* 2012-09-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 22974: Exclude distribution lists from synchronization
 - Fix for bug 23058: Assume a status of 'COMPLETED' for tasks that are 100% completed implicitly

* 2012-09-21 - martin.herfurth@open-xchange.com

 - Fix for bug 23055: External Participant with different upper/lower case spelling are detected as party crasher.

* 2012-09-20 - marcus.klein@open-xchange.com

 - Fix for bug 22405: Extended build system to support arbitrary resources in bundles. Added fetcher.properties to bundle resources.

* 2012-09-20 - thorben.betten@open-xchange.com

 - Fix for bug 22980: No "hidden" mailbox expunge anymore
 - Fix for bug 22897: Delete only matching session if marked for removal
 - Fix for bug 23037: Properly mapping parsed TNEF read receipt to a multipart

 * 2012-09-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 23046: Skip validation of URL property in vCards

* 2012-09-19 - francisco.laguna@open-xchange.com

 - Fix for bug 22525: Remove I18nService from needed services array in subscription json activator, since they are discovered dynamically.

* 2012-09-19 - marcus.klein@open-xchange.com
