@@ -18,6 +18,7 @@ Import-Package: com.openexchange.api2,
  com.openexchange.groupware,
  com.openexchange.groupware.calendar,
  com.openexchange.groupware.container,
+ com.openexchange.groupware.container.participants,
  com.openexchange.groupware.contexts,
  com.openexchange.groupware.contexts.impl,
  com.openexchange.groupware.ldap,
